# web-dev

./: .breakpoints  README.md  app.py  database.py  forms.py  pyproject.toml  requirements.txt
templates/: admin.html  banner.html  bootstrap.html  footer.html  home.html  login.html  nav.html  product.html  productpage.html  products.html  register.html
